--- a/content/contentmaster.css
+++ b/content/contentmaster.css
@@ -92,37 +92,81 @@ body{
     float: left;
   }
 }
-
-.contentarea{
-  position: relative;
-  text-align: center;
-  width: 100%;
-  margin-top: 300px;
-  height: 100%;
-  font-family: Oswald;
+.books{
+  margin-top: 150px;
+}
+.dbtn button{
+  padding: 10px;
+  background-color: rgb(77, 125, 71);
+  border: none;
   color: white;
-
+  cursor: pointer;
 }
-.footer{
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  width: 100%;
-  background-color: inherit;
-}
-.footer a{
-  font-size: 15px;
-  font-family: Oswald;
-  font-weight: 800;
-  color: #a1a1a1;
-  display:block;
-  text-decoration: none;
-  float: right;
+.dbtn button:hover{
+  background-color: rgb(116, 180, 108);
 }
 @media screen and (max-width: 600px) {
-  .contentarea{
-    margin-top: 200px;
-    font-size: 17px;
+  .box{
+    margin-left: 2%;
+    margin-right: 2%;
+    padding: 22px;
+    border-radius: 8px 8px;
+    background-color: white;
     transition: 0.5s;
+    border-style: solid;
+    border-color: rgb(182, 182, 182);
+    border-width: 1px;
+    font-weight: bold;
+    box-shadow: 1px 1px 18px black;
+  }
+  .box hr{
+    height: 1px;
+    border: none;
+    background-color: #e0a6a6;
+    width: 100%;
+
+  }
+  .box h3{
+    font-size: 22px;
+    font-family: sans-serif;
+    color: #ee6f6f;
+  }
+  .box p{
+    font-family: sans-serif;
+    color: #ee6f6f;
+  }
+  .dbtn{
+
+  }
+}
+@media screen and (min-width: 600px) {
+  .box{
+    margin-left: 17%;
+    margin-right: 17%;
+    padding: 22px;
+    border-radius: 8px 8px;
+    background-color: white;
+    transition: 0.5s;
+    border-style: solid;
+    border-color: rgb(182, 182, 182);
+    border-width: 1px;
+    font-weight: bold;
+    box-shadow: 1px 1px 18px black;
+  }
+  .box hr{
+    height: 1px;
+    border: none;
+    background-color: #e0a6a6;
+    width: 100%;
+
+  }
+  .box h3{
+    font-size: 22px;
+    font-family: sans-serif;
+    color: #ee6f6f;
+  }
+  .box p{
+    font-family: sans-serif;
+    color: #ee6f6f;
   }
 }
