--- a/content/contentmaster.css
+++ b/content/contentmaster.css
@@ -94,6 +94,7 @@ body{
 }
 .books{
   margin-top: 150px;
+  margin-bottom: 20px;
 }
 .dbtn button{
   padding: 10px;
@@ -118,6 +119,8 @@ body{
     border-width: 1px;
     font-weight: bold;
     box-shadow: 1px 1px 18px black;
+    float: left;
+    margin-bottom: 80px;
   }
   .box hr{
     height: 1px;
@@ -152,6 +155,9 @@ body{
     border-width: 1px;
     font-weight: bold;
     box-shadow: 1px 1px 18px black;
+    float: left;
+    margin-bottom: 80px;
+
   }
   .box hr{
     height: 1px;
